--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>Lista zakupów</title>
+    <link href="./favicon.png" rel="icon" type="image/x-icon">
 </head>
 <body>
 <div id="root"></div>
